# sideslip-angle-vehicle-estimation

./: LICENSE  README.md
datasets/: LINK.txt  mat2txt.m
datasets/20140222_01_01_03_250lm/: axCG.txt  axCGFilt.txt  ayCG.txt  ayCGFilt.txt  beta_true.txt  delta.txt  deltaFL.txt  deltaFR.txt  t.txt  vx.txt  vy.txt  yawAngAcc.txt  yawAngAccFilt.txt  yawRate.txt  yawRateFilt.txt
estimators/cpp_factor_graph/: CMakeLists.txt  compare_results.m  main.cpp
estimators/matlab_kf/: BetaStanfordLinear.m  Jlinbcmod.m  Jlinbcmod2.m  LinearKF.m  ModelOverTime.xlsx  dbetalin.m  dyawlin.m
